@@ -1,12 +1,13 @@
 package io.dataease.chart.charts.impl;
 
+import com.beust.jcommander.Strings;
 import io.dataease.chart.charts.ChartHandlerManager;
 import io.dataease.chart.constant.ChartConstants;
 import io.dataease.chart.manage.ChartDataManage;
 import io.dataease.chart.manage.ChartViewManege;
 import io.dataease.chart.utils.ChartDataBuild;
+import io.dataease.constant.SQLConstants;
 import io.dataease.dataset.manage.DatasetTableFieldManage;
-import io.dataease.engine.constant.SQLConstants;
 import io.dataease.engine.sql.SQLProvider;
 import io.dataease.engine.trans.Dimension2SQLObj;
 import io.dataease.engine.trans.Quota2SQLObj;
@@ -43,6 +44,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.text.SimpleDateFormat;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @Component
@@ -123,7 +125,9 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         //自定义排序
         data = ChartDataUtil.resultCustomSort(xAxis, yAxis, view.getSortPriority(), data);
         //快速计算
-        quickCalc(xAxis, yAxis, data);
+        var extStack = formatResult.getAxisMap().get(ChartAxis.extStack);
+        var xAxisExt = formatResult.getAxisMap().get(ChartAxis.xAxisExt);
+        quickCalc(xAxis, yAxis, xAxisExt, extStack, view.getType(), data);
         //数据重组逻辑可重载
         var result = this.buildResult(view, formatResult, filterResult, data);
         T calcResult = (T) new ChartCalcDataResult();
@@ -166,8 +170,8 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         dataMap.putAll(calcResult.getData());
         dataMap.putAll(mapTableNormal);
         dataMap.put("sourceFields", allFields);
-        mergeAssistField(calcResult.getDynamicAssistFields(), calcResult.getAssistData());
-        dataMap.put("dynamicAssistLines", calcResult.getDynamicAssistFields());
+        List<ChartSeniorAssistDTO> chartSeniorAssistDTOS = mergeAssistField(calcResult.getDynamicAssistFields(), calcResult.getAssistData(), calcResult.getDynamicAssistFieldsOriginList(), calcResult.getAssistDataOriginList());
+        dataMap.put("dynamicAssistLines", chartSeniorAssistDTOS);
         view.setData(dataMap);
         view.setSql(Base64.getEncoder().encodeToString(calcResult.getQuerySql().getBytes()));
         view.setDrill(isDrill);
@@ -175,18 +179,30 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         return view;
     }
 
-
-    protected void mergeAssistField(List<ChartSeniorAssistDTO> dynamicAssistFields, List<String[]> assistData) {
-        if (ObjectUtils.isEmpty(assistData)) {
-            return;
-        }
-        String[] strings = assistData.get(0);
-        for (int i = 0; i < dynamicAssistFields.size(); i++) {
-            if (i < strings.length) {
-                ChartSeniorAssistDTO chartSeniorAssistDTO = dynamicAssistFields.get(i);
-                chartSeniorAssistDTO.setValue(strings[i]);
+    protected List<ChartSeniorAssistDTO> mergeAssistField(List<ChartSeniorAssistDTO> dynamicAssistFields, List<String[]> assistData, List<ChartSeniorAssistDTO> dynamicAssistFieldsOriginList, List<String[]> assistDataOriginList) {
+        List<ChartSeniorAssistDTO> list = new ArrayList<>();
+        if (ObjectUtils.isNotEmpty(assistData)) {
+            String[] strings = assistData.getFirst();
+            for (int i = 0; i < dynamicAssistFields.size(); i++) {
+                if (i < strings.length) {
+                    ChartSeniorAssistDTO chartSeniorAssistDTO = dynamicAssistFields.get(i);
+                    chartSeniorAssistDTO.setValue(strings[i]);
+                    list.add(chartSeniorAssistDTO);
+                }
             }
         }
+
+        if (ObjectUtils.isNotEmpty(assistDataOriginList)) {
+            String[] stringsOriginList = assistDataOriginList.getLast();// 取最后一项，如果有其他运算逻辑需要取明细数据可增加逻辑
+            for (int i = 0; i < dynamicAssistFieldsOriginList.size(); i++) {
+                if (i < stringsOriginList.length) {
+                    ChartSeniorAssistDTO chartSeniorAssistDTO = dynamicAssistFieldsOriginList.get(i);
+                    chartSeniorAssistDTO.setValue(stringsOriginList[i]);
+                    list.add(chartSeniorAssistDTO);
+                }
+            }
+        }
+        return list;
     }
 
     protected List<ChartSeniorAssistDTO> getDynamicAssistFields(ChartViewDTO view) {
@@ -392,27 +408,72 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         }
 
         boolean crossDs = Utils.isCrossDs(dsMap);
-        StringBuilder stringBuilder = new StringBuilder();
+        List<String> fieldList = new ArrayList<>();
         for (int i = 0; i < assistFields.size(); i++) {
             ChartViewFieldDTO dto = assistFields.get(i);
+            if (StringUtils.equalsIgnoreCase(dto.getSummary(), "last_item")) {
+                continue;
+            }
             if (crossDs) {
-                if (i == (assistFields.size() - 1)) {
-                    stringBuilder.append(dto.getSummary() + "(" + dto.getOriginName() + ")");
-                } else {
-                    stringBuilder.append(dto.getSummary() + "(" + dto.getOriginName() + "),");
-                }
+                fieldList.add(dto.getSummary() + "(" + dto.getOriginName() + ")");
             } else {
-                if (i == (assistFields.size() - 1)) {
-                    stringBuilder.append(dto.getSummary() + "(" + prefix + dto.getOriginName() + suffix + ")");
+                fieldList.add(dto.getSummary() + "(" + prefix + dto.getOriginName() + suffix + ")");
+            }
+        }
+        return "SELECT " + Strings.join(",", fieldList) + " FROM (" + sql + ") tmp";
+    }
+
+    protected String assistSQLOriginList(String sql, List<ChartViewFieldDTO> assistFields, Map<Long, DatasourceSchemaDTO> dsMap) {
+        // get datasource prefix and suffix
+        String dsType = dsMap.entrySet().iterator().next().getValue().getType();
+        String prefix = "";
+        String suffix = "";
+        if (Arrays.stream(DatasourceConfiguration.DatasourceType.values()).map(DatasourceConfiguration.DatasourceType::getType).toList().contains(dsType)) {
+            DatasourceConfiguration.DatasourceType datasourceType = DatasourceConfiguration.DatasourceType.valueOf(dsType);
+            prefix = datasourceType.getPrefix();
+            suffix = datasourceType.getSuffix();
+        } else {
+            if (LicenseUtil.licenseValid()) {
+                List<XpackPluginsDatasourceVO> xpackPluginsDatasourceVOS = pluginManage.queryPluginDs();
+                List<XpackPluginsDatasourceVO> list = xpackPluginsDatasourceVOS.stream().filter(ele -> StringUtils.equals(ele.getType(), dsType)).toList();
+                if (ObjectUtils.isNotEmpty(list)) {
+                    XpackPluginsDatasourceVO first = list.getFirst();
+                    prefix = first.getPrefix();
+                    suffix = first.getSuffix();
                 } else {
-                    stringBuilder.append(dto.getSummary() + "(" + prefix + dto.getOriginName() + suffix + "),");
+                    DEException.throwException("当前数据源插件不存在");
                 }
             }
         }
-        return "SELECT " + stringBuilder + " FROM (" + sql + ") tmp";
+
+        boolean crossDs = Utils.isCrossDs(dsMap);
+        List<String> fieldList = new ArrayList<>();
+        for (int i = 0; i < assistFields.size(); i++) {
+            ChartViewFieldDTO dto = assistFields.get(i);
+            if (StringUtils.equalsIgnoreCase(dto.getSummary(), "last_item")) {
+                if (crossDs) {
+                    fieldList.add(dto.getOriginName());
+                } else {
+                    fieldList.add(prefix + dto.getOriginName() + suffix);
+                }
+            }
+        }
+        return "SELECT " + Strings.join(",", fieldList) + " FROM (" + sql + ") tmp";
     }
 
-    protected void quickCalc(List<ChartViewFieldDTO> xAxis, List<ChartViewFieldDTO> yAxis, List<String[]> data) {
+    protected List<String> mergeIds(List<ChartViewFieldDTO> xAxisExt, List<ChartViewFieldDTO> extStack) {
+        Set<String> idSet = new HashSet<>();
+        if (xAxisExt != null) {
+            xAxisExt.forEach(field -> idSet.add(String.valueOf(field.getId())));
+        }
+        if (extStack != null) {
+            extStack.forEach(field -> idSet.add(String.valueOf(field.getId())));
+        }
+        return new ArrayList<>(idSet);
+    }
+
+    protected void quickCalc(List<ChartViewFieldDTO> xAxis, List<ChartViewFieldDTO> yAxis
+            , List<ChartViewFieldDTO> xAxisExt, List<ChartViewFieldDTO> extStack, String chartType, List<String[]> data) {
         for (int i = 0; i < yAxis.size(); i++) {
             ChartViewFieldDTO chartViewFieldDTO = yAxis.get(i);
             ChartFieldCompareDTO compareCalc = chartViewFieldDTO.getCompareCalc();
@@ -504,6 +565,103 @@ public class DefaultChartHandler extends AbstractChartPlugin {
                         item[dataIndex] = new BigDecimal(cValue)
                                 .divide(sum, 8, RoundingMode.HALF_UP)
                                 .toString();
+                    }
+                } else if (StringUtils.equalsIgnoreCase(compareCalc.getType(), "accumulate")) {
+                    // 累加
+                    if (CollectionUtils.isEmpty(data)) {
+                        break;
+                    }
+                    if (Objects.isNull(extStack)) {
+                        extStack = Arrays.asList();
+                    }
+                    if (Objects.isNull(xAxisExt)) {
+                        xAxisExt = Arrays.asList();
+                    }
+                    boolean isStack = StringUtils.containsIgnoreCase(chartType, "stack") && CollectionUtils.isNotEmpty(extStack);
+                    boolean isGroup = StringUtils.containsIgnoreCase(chartType, "group")
+                            || (CollectionUtils.isNotEmpty(xAxisExt));
+                    if (isStack || isGroup) {
+                        if (CollectionUtils.isEmpty(xAxis)) {
+                            break;
+                        }
+                        final Map<String, Integer> mainIndexMap = new HashMap<>();
+                        final List<List<String[]>> mainMatrix = new ArrayList<>();
+                        // 排除group和stack的字段
+                        List<String> groupStackAxisIds = mergeIds(xAxisExt, extStack);
+                        List<ChartViewFieldDTO> xAxisBase = xAxis.stream().filter(ele -> !groupStackAxisIds.contains(String.valueOf(ele.getId()))).collect(Collectors.toList());
+                        if (CollectionUtils.isEmpty(xAxisBase) && CollectionUtils.isNotEmpty(xAxis)) {
+                            xAxisBase.add(xAxis.get(0));
+                        }
+                        data.forEach(item -> {
+                            String[] mainAxisArr = Arrays.copyOfRange(item, 0, xAxisBase.size());
+                            String mainAxis = StringUtils.join(mainAxisArr, '-');
+                            Integer index = mainIndexMap.get(mainAxis);
+                            if (index == null) {
+                                mainIndexMap.put(mainAxis, mainMatrix.size());
+                                List<String[]> tmp = new ArrayList<>();
+                                tmp.add(item);
+                                mainMatrix.add(tmp);
+                            } else {
+                                List<String[]> tmp = mainMatrix.get(index);
+                                tmp.add(item);
+                            }
+                        });
+                        int finalDataIndex = dataIndex;
+                        int subEndIndex = xAxisBase.size();
+                        if (CollectionUtils.isNotEmpty(xAxisExt)
+                                || StringUtils.containsIgnoreCase(chartType, "group")
+                                || StringUtils.containsIgnoreCase(chartType, "-mix")) {
+                            subEndIndex += xAxisExt.size();
+                        }
+                        if (StringUtils.containsIgnoreCase(chartType, "stack")) {
+                            subEndIndex += extStack.size();
+                        }
+                        int finalSubEndIndex = subEndIndex;
+                        // 存储上次的值
+                        Map<String, BigDecimal> preDataMap = new HashMap<>();
+                        //滑动累加
+                        for (int k = 1; k < mainMatrix.size(); k++) {
+                            List<String[]> preDataItems = mainMatrix.get(k - 1);
+                            List<String[]> curDataItems = mainMatrix.get(k);
+                            preDataItems.forEach(preDataItem -> {
+                                String[] groupStackAxisArr = Arrays.copyOfRange(preDataItem, xAxisBase.size(), finalSubEndIndex);
+                                String groupStackAxis = StringUtils.join(groupStackAxisArr, '-');
+                                String preVal = preDataItem[finalDataIndex];
+                                if (StringUtils.isBlank(preVal)) {
+                                    preVal = "0";
+                                }
+                                preDataMap.put(groupStackAxis, new BigDecimal(preVal));
+                            });
+                            curDataItems.forEach(curDataItem -> {
+                                String[] groupStackAxisArr = Arrays.copyOfRange(curDataItem, xAxisBase.size(), finalSubEndIndex);
+                                String groupStackAxis = StringUtils.join(groupStackAxisArr, '-');
+                                BigDecimal preValue = preDataMap.get(groupStackAxis);
+                                if (preValue != null) {
+                                    curDataItem[finalDataIndex] = new BigDecimal(curDataItem[finalDataIndex])
+                                            .add(preValue)
+                                            .toString();
+                                } else {
+                                    if (preDataMap.containsKey(groupStackAxis)) {
+                                        curDataItem[finalDataIndex] = new BigDecimal(curDataItem[finalDataIndex])
+                                                .add(preDataMap.get(groupStackAxis))
+                                                .toString();
+                                    }
+                                }
+                            });
+                        }
+                    } else {
+                        final int index = dataIndex;
+                        final AtomicReference<BigDecimal> accumValue = new AtomicReference<>(new BigDecimal(0));
+                        data.forEach(item -> {
+                            String val = item[index];
+                            BigDecimal curAccumValue = accumValue.get();
+                            if (!StringUtils.isBlank(val)) {
+                                BigDecimal curVal = new BigDecimal(val);
+                                curAccumValue = curAccumValue.add(curVal);
+                                accumValue.set(curAccumValue);
+                            }
+                            item[index] = curAccumValue.toString();
+                        });
                     }
                 }
             }
